...
    <string name="no_upload_service_selected">No upload service selected</string>
    <string name="help">Help</string>
    <string name="copied_to_clipboard">%1$s copied to clipboard</string>
    <string name="failed_to_copy">Failed to copy %1$s</string>
    <string name="qr_code">QR Code</string>
    <string name="failed_to_generate_qr_code">Failed to generate QR Code</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="view_as_qr_code">View as QR code</string>
</resources>

